--- a/client/src/components/Cards/Cards.module.css
+++ b/client/src/components/Cards/Cards.module.css
@@ -2,7 +2,7 @@ h1 {
     font-family:Arial, Helvetica, sans-serif;
     font-size: 2.5em;
     color: rgb(239,108,0);
-    text-shadow: rgb(253, 152, 0) 0em 0em 0.3em;
+    text-shadow: rgb(3, 0, 10) 0em 0em 0.3em;
 }
 
 .container{
@@ -37,7 +37,8 @@ h1 {
 
 .reload {
     color: white;
-    background-color:rgba(160, 68, 247, 0.551);
+    background: rgb(239,124,0);
+    background: radial-gradient(circle, rgba(239,124,0,1) 13%, rgba(0,117,255,1) 84%);
     border-radius: 2rem;
     padding: 0.4rem;
 
