--- a/client/src/components/Paginate/Paginate.module.css
+++ b/client/src/components/Paginate/Paginate.module.css
@@ -7,7 +7,7 @@
 
 .paginado button {
     color: whitesmoke;
-    background-color: rgba(87, 41, 124, 0.64);
+    background-color: rgb(239,108,0,0.50);
     padding: 0.4rem;
     width: 1.5rem;
     text-align: center;
@@ -16,7 +16,7 @@
 }
 
 .paginado button:focus{
-    background-color: rgb(106, 0, 255);
+    background-color: #0075ff;
     font-size: 0.9em;
     box-shadow: white 0em 0em 0.3em 0.1em;
 }
