--- a/client/src/pages/Create/Create.module.css
+++ b/client/src/pages/Create/Create.module.css
@@ -1,6 +1,6 @@
 .container {
     padding-top: 20vh;
-    background-image: url('../../images/pexels-lukas-349609.jpg');
+    background-image: url('../../images/create.jpg');
     width: 100%;
     height: 80vh;
     background-size: cover;
@@ -11,7 +11,7 @@
 }
 
 .formulario {
-    background-color: rgba(32, 218, 203, 0.332);
+    background-color: rgba(105,105,105,0.3);
     border-radius: 1rem;
     width: max-content;
     
@@ -21,7 +21,7 @@
 label {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 1.2rem;
-    color: rgb(244, 232, 255);
+    color: rgb(239,108,0);
     text-shadow: black 0.1em 0.2em 0.3em;
 }
 
